--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,7 +90,8 @@
         android:id="@+id/main_mask"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#88000000" />
+        android:background="#88000000"
+        android:clickable="true" />
 
     <FrameLayout
         android:id="@+id/temperature_layout"
@@ -260,6 +261,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/black_alpha"
+        android:clickable="true"
         android:visibility="gone">
 
         <View
