--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -43,5 +43,8 @@
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/tab_layout" />
+        android:layout_below="@+id/tab_layout"
+        android:fadingEdgeLength="0dp"
+        android:overScrollMode="never"
+        android:fadingEdge="none"/>
 </RelativeLayout>
